syntax = "proto3";

option java_package = "sinnet.grpc.users";
option java_outer_classname = "UsersProto";
option java_multiple_files = true;

package usersprojects;

import "common.proto";

service Users {
  /**
  * Returns all users allowed to participate in operations related to project defined by contextual UserToken.
  */
  rpc search(SearchRequest) returns (SearchReply);
  rpc includeOperator(IncludeOperatorCommand) returns (IncludeOperatorResult);
}

message SearchRequest {
  /** Contextual token limits returned values in two ways:
  * - returned users are limited to project beign part of the token
  * - returned users are not returnned at all if the requestor is not the user on the project
  */
  common.UserToken userToken = 1;
}

message SearchReply {
  repeated UsersSearchModel items = 1;
}

message UsersSearchModel {
  string entityId = 1;
  string email = 2;
}

message IncludeOperatorCommand {
  string project_id = 1;
  repeated string operator_email = 2;
}

message IncludeOperatorResult {
  bool success = 1;
}
